Nurbs Crash #39833

Closed
opened 2014-04-21 21:07:37 +02:00 by Quico Noizeux · 8 comments

System Information
Mac OSX 10.7 (Lion)
Operating system and graphics card

Blender Version
Broken: 2.70 88a2263
Worked: (optional)

Short description of error

Crashes Blender if there is a nurbs object w/o points with Cycles

Exact steps for others to reproduce the error

1 - Create a nurbs curve
2 - Enter edit mode and delete all points
3 - Render it with Cycles

**System Information** Mac OSX 10.7 (Lion) Operating system and graphics card **Blender Version** Broken: 2.70 88a2263 Worked: (optional) **Short description of error** Crashes Blender if there is a nurbs object w/o points with Cycles **Exact steps for others to reproduce the error** 1 - Create a nurbs curve 2 - Enter edit mode and delete all points 3 - Render it with Cycles
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @sembei-3

Added subscriber: @sembei-3

Added subscriber: @kevindietrich

Added subscriber: @kevindietrich

this causes a segmentation fault :

in Mesh_use_auto_smooth_get in build_linux_debug/source/blender/makesrna/intern/rna_mesh_gen.c:2919

 return (((data->flag) & 32) != 0);
this causes a segmentation fault : in Mesh_use_auto_smooth_get in build_linux_debug/source/blender/makesrna/intern/rna_mesh_gen.c:2919 ``` return (((data->flag) & 32) != 0); ```

This issue was referenced by blender/blender-addons-contrib@0e2f6c7fc4

This issue was referenced by blender/blender-addons-contrib@0e2f6c7fc4db06b8fa9be758e294a3376c32bc5d

This issue was referenced by 0e2f6c7fc4

This issue was referenced by 0e2f6c7fc4db06b8fa9be758e294a3376c32bc5d
Bastien Montagne self-assigned this 2014-04-21 23:42:20 +02:00

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 0e2f6c7fc4.

Closed by commit 0e2f6c7fc4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#39833
No description provided.