Fix T39833: Nurbs Crash

Converting empty object to mesh can generate a 'Null' BL:Mesh, we have to check against it.